Princess: fix usage of ambiguous methods for Scala types.